objects/CT_Teams__c.object
<CustomObject>
    <fields>
        <fullName>Commission_Date__c</fullName>
        <label>Commission Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Create_Monthly_Bills__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Monthly Bills</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monthly_Team_Bills_to_Calculate__c</fullName>
        <label>Monthly Team Bills to Calculate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Earnings__c</fullName>
        <formula>Monthly_Team_Bills_to_Calculate__c   *  Team_User__r.CT_User_Split__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Team Earnings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Members_100__c</fullName>
        <formula>IF( Team_User__r.Team_Member_1__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_2__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_3__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_4__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_5__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_6__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_7__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_8__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_9__r.CT_User_Split__c =1.0,1,0)
+
IF( Team_User__r.Team_Member_10__r.CT_User_Split__c =1.0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Team Members (100)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Members_All__c</fullName>
        <formula>IF(NOT(ISBLANK( Team_User__r.Team_Member_1__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_2__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_3__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_4__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_5__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_6__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_7__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_8__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_9__c )),1,0)
+
IF(NOT(ISBLANK( Team_User__r.Team_Member_10__c )),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Team Members All</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Members_Non_100__c</fullName>
        <formula>Team_Members_All__c -  Team_Members_100__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label># Team Members Non 100</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CT_Teams</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_100_Earnings__c</fullName>
        <formula>Team_Earnings__c -  Total_Non_100_Earnings__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total 100 Earnings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Non_100_Earnings__c</fullName>
        <label>Total Non 100 Earnings</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Update_Non_100_Earnings__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Update Non 100 Earnings</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X18_Digit_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <label>18 Digit ID</label>
        <type>Text</type>
    </fields>
    <label>CT Team</label>
    <nameField>
        <label>CT Teams Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CT Teams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>